# VIT-STUDENT-MCP-SERVER

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: database.py  server.py  sync.py
vit_student_mcp/: database.py  inspect_db.py  seed.py  server.py  sync.py
vit_student_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
