[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-student-mcp"
version = "1.0.0"
description = "A local MCP server for VIT students to sync and access VTOP data with Claude."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp",
    "requests",
    "beautifulsoup4",
    "playwright",
    "ddddocr"
]

[project.scripts]
vit-mcp-sync = "vit_student_mcp.sync:main"
vit-mcp-serve = "vit_student_mcp.server:main"

[tool.setuptools.packages.find]
include = ["vit_student_mcp*"]
